full translate (probably last update)

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,15 +11,13 @@
 	<div class="title-block">
 		<span>404</span>
 		<h2 class="error-title">
-			Page not found
+			Nie pomyliły ci się strony mordo?
 		</h2>
 	</div>
 	<div class="error-block">
-		<h3 class="error-subtitle">Where am I?</h3>
+		<h3 class="error-subtitle">Gdzie ja jestem?</h3>
 		<ol>
-			<li>- Check that the URL you entered is correct.</li>
-			<li>- Make sure that the place you are visiting isn't under maintenance!</li>
-			<li>- Maybe you're not permitted to visit this page?</li>
+			<li>-Nie wiem</li>
 		</ol>
 	</div>
 </div>
