--- a/templates/admin/edit_user.html
+++ b/templates/admin/edit_user.html
@@ -59,8 +59,8 @@
           <div class="row row-cards">
             <div class="col-md-4">
               <div class="card">
-                <div class="card-cover text-center" style="background-image: url(https://seventwentyseven.tk/banners/{{ user_data['id'] }})">
-                  <span class="avatar avatar-xl avatar-thumb avatar-rounded" style="background-image: url(https://a.seventwentyseven.tk/{{ user_data['id'] }})"></span>
+                <div class="card-cover text-center" style="background-image: url(https://zbancho.ml/banners/{{ user_data['id'] }})">
+                  <span class="avatar avatar-xl avatar-thumb avatar-rounded" style="background-image: url(https://a.zbancho.ml/{{ user_data['id'] }})"></span>
                 </div>
                 <div class="card-body text-left">
                   <div class="mb-1"><h2>{{ user_data['name'] }}</h2></div>
