--- a/templates/admin/home.html
+++ b/templates/admin/home.html
@@ -13,7 +13,7 @@
   </div>
   <div class="list-timeline-content">
     <div class="list-timeline-time">{{ time_ago }}</div>
-    <p class="list-timeline-title"><a href="https://seventwentyseven.tk/u/{{ author_id }}">{{ author_name }}</a> {{ type }} <a href="https://seventwentyseven.tk/u/{{ receiver_id }}">{{ receiver_name }}</a></p>
+    <p class="list-timeline-title"><a href="https://zbancho.ml/u/{{ author_id }}">{{ author_name }}</a> {{ type }} <a href="https://zbancho.ml/u/{{ receiver_id }}">{{ receiver_name }}</a></p>
     <p class="text-muted">{{ description }}</p>
   </div>
 </li>
