--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -143,7 +143,7 @@
                         <div class="card-footer d-flex align-items-center">
                             <ul class="pagination m-0 m-auto">
                                 <li class="page-item">
-                                    <a class="page-link" href="https://seventwentyseven.tk/admin/users/?page=1">
+                                    <a class="page-link" href="https://zbancho.ml/admin/users/?page=1">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-left" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
                                             <path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
@@ -151,25 +151,25 @@
                                     </a>
                                 </li>
                                 <li class="page-item{{ page_foot[5][1] }}">
-                                    <a class="page-link" href="https://seventwentyseven.tk/admin/users/?page={{ page_foot[5][0] }}" tabindex="-1" aria-disabled="true">
+                                    <a class="page-link" href="https://zbancho.ml/admin/users/?page={{ page_foot[5][0] }}" tabindex="-1" aria-disabled="true">
                                         <!-- Download SVG icon from http://tabler-icons.io/i/chevron-left -->
                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><polyline points="15 6 9 12 15 18"></polyline></svg>
                                         prev
                                     </a>
                                 </li>
-                                <li class="page-item{{ page_foot[0][1] }}"><a class="page-link" href="https://seventwentyseven.tk/admin/users/?page={{ page_foot[0][0] }}">{{ page_foot[0][0] }}</a></li>
-                                <li class="page-item{{ page_foot[1][1] }}"><a class="page-link" href="https://seventwentyseven.tk/admin/users/?page={{ page_foot[1][0] }}">{{ page_foot[1][0] }}</a></li>
-                                <li class="page-item{{ page_foot[2][1] }}"><a class="page-link" href="https://seventwentyseven.tk/admin/users/?page={{ page_foot[2][0] }}">{{ page_foot[2][0] }}</a></li>
-                                <li class="page-item{{ page_foot[3][1] }}"><a class="page-link" href="https://seventwentyseven.tk/admin/users/?page={{ page_foot[3][0] }}">{{ page_foot[3][0] }}</a></li>
-                                <li class="page-item{{ page_foot[4][1] }}"><a class="page-link" href="https://seventwentyseven.tk/admin/users/?page={{ page_foot[4][0] }}">{{ page_foot[4][0] }}</a></li>
+                                <li class="page-item{{ page_foot[0][1] }}"><a class="page-link" href="https://zbancho.ml/admin/users/?page={{ page_foot[0][0] }}">{{ page_foot[0][0] }}</a></li>
+                                <li class="page-item{{ page_foot[1][1] }}"><a class="page-link" href="https://zbancho.ml/admin/users/?page={{ page_foot[1][0] }}">{{ page_foot[1][0] }}</a></li>
+                                <li class="page-item{{ page_foot[2][1] }}"><a class="page-link" href="https://zbancho.ml/admin/users/?page={{ page_foot[2][0] }}">{{ page_foot[2][0] }}</a></li>
+                                <li class="page-item{{ page_foot[3][1] }}"><a class="page-link" href="https://zbancho.ml/admin/users/?page={{ page_foot[3][0] }}">{{ page_foot[3][0] }}</a></li>
+                                <li class="page-item{{ page_foot[4][1] }}"><a class="page-link" href="https://zbancho.ml/admin/users/?page={{ page_foot[4][0] }}">{{ page_foot[4][0] }}</a></li>
                                 <li class="page-item">
-                                    <a class="page-link{{ page_foot[6][1] }}" href="https://seventwentyseven.tk/admin/users/?page={{ page_foot[6][0] }}">
+                                    <a class="page-link{{ page_foot[6][1] }}" href="https://zbancho.ml/admin/users/?page={{ page_foot[6][0] }}">
                                         next <!-- Download SVG icon from http://tabler-icons.io/i/chevron-right -->
                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><polyline points="9 6 15 12 9 18"></polyline></svg>
                                     </a>
                                 </li>
                                 <li class="page-item">
-                                    <a class="page-link" href="https://seventwentyseven.tk/admin/users/?page={{ max_page }}">
+                                    <a class="page-link" href="https://zbancho.ml/admin/users/?page={{ max_page }}">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
                                             <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
