--- a/templates/settings/password.html
+++ b/templates/settings/password.html
@@ -9,13 +9,13 @@
   <div class="block-content right" id="settings-content">
     <div id="general" class="single-right-block">
       <div class="right-block-header">
-        Password Change
+        Zmiana hasła
       </div>
       <form action="/settings/password" method="post" class="right-block-content">
         <div class="single-block-content">
           <div class="block-content--left">
             <div class="field-label is-normal">
-              <label class="label">Old Password</label>
+              <label class="label">Stare hasło</label>
             </div>
           </div>
           <div class="block-content--right">
@@ -31,7 +31,7 @@
         <div class="single-block-content">
             <div class="block-content--left">
               <div class="field-label is-normal">
-                <label class="label">New Password</label>
+                <label class="label">nowe hasło</label>
               </div>
             </div>
             <div class="block-content--right">
@@ -47,7 +47,7 @@
           <div class="single-block-content">
             <div class="block-content--left">
               <div class="field-label is-normal">
-                <label class="label">Repeat Password</label>
+                <label class="label">powtórz hasło</label>
               </div>
             </div>
             <div class="block-content--right">
