--- a/templates/settings/profile.html
+++ b/templates/settings/profile.html
@@ -36,13 +36,13 @@
   <div class="block-content right">
     <div id="general" class="single-right-block">
       <div class="right-block-header">
-        User Infomation
+        Informacje o graczu
       </div>
       <form action="/settings/profile" method="post" class="setting-block-content">
         <div class="single-block-content">
           <div class="block-content--left">
             <div class="field-label is-normal">
-              <label class="label">Username</label>
+              <label class="label">Nazwa</label>
             </div>
           </div>
           <div class="block-content--right">
@@ -59,7 +59,7 @@
         <div class="single-block-content">
           <div class="block-content--left">
             <div class="field-label is-normal">
-              <label class="label">Email</label>
+              <label class="label">mail</label>
             </div>
           </div>
           <div class="block-content--right">
@@ -92,7 +92,7 @@
         -->
         <button class='button is-primary' type='submit'><span>Save</span><span class='icon is-small'><i class='fas fa-check'></i></span></button>
         <span style="background-color: hsla(var(--main), 10%, 10%); border-radius: 9001px; padding: 15px; width: 95%; margin-top: 50px;">
-          Note: Changing username on your own isn't possible at the moment. If you have supporter please contact staff if you want to change it.
+          nota: Zmienianie nazwy nie jest teraz możliwe
         </span>
       </form>
     </div>
