--- a/templates/settings/sidebar.html
+++ b/templates/settings/sidebar.html
@@ -9,19 +9,19 @@
     </div>
     <div class="left-selector">
         <a class="single-menu single-menu--active router-link" href="/settings/profile">
-            <i class="fas fa-user"></i><span class="single-menu--text"> Profile </span>
+            <i class="fas fa-user"></i><span class="single-menu--text"> Profil </span>
         </a>
         <a class="single-menu single-menu--active router-link" href="/settings/avatar">
             <i class="fas fa-brush"></i><span class="single-menu--text"> Avatar </span>
         </a>
         <a class="single-menu single-menu--active router-link" href="/settings/password">
-            <i class="fas fa-lock"></i><span class="single-menu--text"> Password </span>
+            <i class="fas fa-lock"></i><span class="single-menu--text"> Hasło </span>
         </a>
         <a class="single-menu single-menu--active router-link" href="/settings/custom">
-            <i class="fas fa-air-freshener"></i><span class="single-menu--text"> Customisation </span>
+            <i class="fas fa-air-freshener"></i><span class="single-menu--text"> Personalizacja </span>
         </a>
         <a class="single-menu single-menu--active router-link" href="/settings/user_profile">
-            <i class="fas fa-id-card"></i><span class="single-menu--text"> User Profile </span>
+            <i class="fas fa-id-card"></i><span class="single-menu--text"> Profil gracza </span>
         </a>
     </div>
 </div>
