--- a/templates/settings/user_profile.html
+++ b/templates/settings/user_profile.html
@@ -36,13 +36,13 @@
   <div class="block-content right">
     <div id="general" class="single-right-block">
       <div class="right-block-header">
-        User Profile Customisation
+        Personalizacja profilu
       </div>
       <form action="/settings/profile" method="post" class="setting-block-content">
         <div class="single-block-content">
           <div class="block-content--left">
             <div class="field-label is-normal">
-              <label class="label">About Me</label>
+              <label class="label">o mnie</label>
             </div>
           </div>
           <div class="block-content--right">
@@ -55,7 +55,7 @@
             </div>
           </div>
         </div>
-        <button class='button is-primary' type='submit'><span>Save</span><span class='icon is-small'><i class='fas fa-check'></i></span></button>
+        <button class='button is-primary' type='submit'><span>Zapisz</span><span class='icon is-small'><i class='fas fa-check'></i></span></button>
       </form>
     </div>
   </div>
