--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -139,13 +139,13 @@
         </button>
         <div class="navbar-nav flex-row order-md-last">
           <div class="nav-item d-none d-md-flex me-3">
-            <a href="https://seventwentyseven.tk" class="nav-link px-0" tabindex="-1">
+            <a href="https://zbancho.ml" class="nav-link px-0" tabindex="-1">
               <span><i class="fas fa-home"></i> Main Website</span>
             </a>
           </div>
           <div class="nav-item dropdown">
             <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
-              <span class="avatar avatar-sm" style="background-image: url(https://a.seventwentyseven.tk/{{ session['user_data']['id'] }})"></span>
+              <span class="avatar avatar-sm" style="background-image: url(https://a.zbancho.ml/{{ session['user_data']['id'] }})"></span>
               <div class="d-none d-xl-block ps-2">
                 <div>{{ session['user_data']['name'] }}</div>
               </div>
@@ -194,7 +194,7 @@
             <ul class="list-inline list-inline-dots mb-0">
               <li class="list-inline-item">
                 Copyright © 2021
-                <a href="." class="link-secondary">seventwentyseven.tk</a>.
+                <a href="." class="link-secondary">zbancho.ml</a>.
                 All rights reserved.
               </li>
               <li class="list-inline-item">
