--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -14,11 +14,11 @@
     <div id="navbar" class="navbar-menu">
         <div class="navbar-start">
             <a class="navbar-item" href="/home">
-                Home
+                Menu
             </a>
 
             <a class="navbar-item" href="/leaderboard">
-                Leaderboards
+                Topka
             </a>
 
             <!--<div class="navbar-item has-dropdown is-hoverable">
@@ -50,31 +50,31 @@
             {% if session.authenticated %}
             <div class="navbar-item has-dropdown is-hoverable">
                 <a class="navbar-link">
-					<img src="https://a.seventwentyseven.tk/{{ session.user_data['id'] }}" style="height: 100%; margin-right: 7px; border-radius: 9001px;" onError="this.src='/static/images/avatar_notwork.png';">
+					<img src="https://a.zbancho.ml/{{ session.user_data['id'] }}" style="height: 100%; margin-right: 7px; border-radius: 9001px;" onError="this.src='/static/images/avatar_notwork.png';">
                     {{ session.user_data['name'] }}
                 </a>
                 <div class="navbar-dropdown">
                     <a class="navbar-item" href="/u/{{ session.user_data['id'] }}">
-                        Profile
+                        Profil
                     </a>
                     <a class="navbar-item" href="/settings">
-                        Settings
+                        Ustawienia
                     </a>
                 </div>
             </div>
             <div class="navbar-item">
                 <a class="button is-light" href="/logout">
-                    Logout
+                    Wyloguj
                 </a>
             </div>
             {% else %}
             <div class="navbar-item">
                 <div class="buttons">
                     <a class="button is-primary" href="/register">
-                        <strong>Sign up</strong>
+                        <strong>Zarejestruj</strong>
                     </a>
                     <a class="button is-light" href="/login">
-                        Log in
+                        Zaloguj
                     </a>
                 </div>
             </div>
