--- a/templates/settings/avatar.html
+++ b/templates/settings/avatar.html
@@ -16,8 +16,7 @@
           <div class="column">
             <div class="single-block-content avatar-block-content">
               <h4 class="mb-4">Avatar</h4>
-              <div class="subtitle">We recommend an image of at least 512x512 (or 1:1 ratio).
-                You can upload a PNG, JPG under 5MB
+              <div class="subtitle">Zalecamy png do 5mb
               </div>
               <form id="upload-profile" action="/settings/avatar" method="post" enctype="multipart/form-data">
                 <div class="buttons margin-top" id="selection">
@@ -25,7 +24,7 @@
                     <input class="file-input" id="file" type="file" accept="image/jpeg" name="avatar">
                     <span class="file-cta">
                       <span class="file-label">
-                        Choose file
+                        Wybierz plik
                       </span>
                       <span class="file-icon">
                         <i class="fa fa-upload"></i>
@@ -33,14 +32,14 @@
                     </span>
                   </label>
                   <button class="button is-primary" type="submit">
-                    <span class="icon is-small"><i class="fas fa-check"></i></span><span>Save</span>
+                    <span class="icon is-small"><i class="fas fa-check"></i></span><span>Zapisz</span>
                   </button>
                 </div>
               </form>
             </div>
           </div>
           <div class="column">
-            <h4 class="mb-4">Preview</h4>
+            <h4 class="mb-4">Podgląd</h4>
             <div class="preview-block" id="avatar">
               <div class="top-block"></div>
               <div class="bottom-block">
