--- a/templates/settings/custom.html
+++ b/templates/settings/custom.html
@@ -9,7 +9,7 @@
   <div class="block-content right" id="settings-content">
     <div class="single-right-block">
       <div class="right-block-header">
-        Customisation
+        Personalizacja
       </div>
       <div class="right-block-content">
         <div class="flex avatar-flex">
@@ -17,13 +17,13 @@
             <form id="upload-profile" action="/settings/custom" method="post" enctype="multipart/form-data">
               <div class="single-block-content avatar-block-content mb-6">
                 <h4 class="mb-4">Banner</h4>
-                <div class="subtitle">Recommend with 1440x262 pixels with GIF, PNG, JPG, JPEG</div>
+                <div class="subtitle">Zalecane 1440x262 pixeli GIF, PNG, JPG, JPEG</div>
                 <div class="buttons margin-top" id="selection">
                   <label class="file-label">
                     <input class="file-input" id="file-bn" type="file" name="banner">
                     <span class="file-cta">
                       <span class="file-label">
-                        Choose file
+                        Wybierz plik
                       </span>
                       <span class="file-icon">
                         <i class="fa fa-upload"></i>
@@ -35,14 +35,14 @@
               <div class="single-block-content avatar-block-content">
                 <h4 class="mb-4">Profile Background</h4>
                 <div class="subtitle">
-                  Recommend with 16:9 ratio with PNG, JPG, JPEG
+                  Zalecane 16:9
                 </div>
                 <div class="buttons margin-top" id="selection">
                   <label class="file-label">
                     <input class="file-input" id="file-bg" type="file" name="background">
                     <span class="file-cta">
                       <span class="file-label">
-                        Choose file
+                        Wybierz plik
                       </span>
                       <span class="file-icon">
                         <i class="fa fa-upload"></i>
@@ -52,12 +52,12 @@
                 </div>
               </div>
               <div class="custom-button buttons mt-6">
-                <button class='button is-primary' type='submit'><span class='icon is-small'><i class='fas fa-check'></i></span><span>Save</span></button>
+                <button class='button is-primary' type='submit'><span class='icon is-small'><i class='fas fa-check'></i></span><span>Zapisz</span></button>
               </div>
             </form>
           </div>
           <div class="column">
-            <h4 class="mb-4">Preview</h4>
+            <h4 class="mb-4">Podgląd</h4>
             <div class="preview-block" id="avatar">
               <div class="top-block" {% if customizations['banner'] == True %}style="background: linear-gradient(hsl(var(--main), 25%, 25%, 20%), hsl(var(--main), 25%, 25%, 60%)), url(/profbanner/{{ session['user_data']['id'] }}); background-size: cover"{% endif %}></div>
               <div class="bottom-block">
