--- a/templates/verify.html
+++ b/templates/verify.html
@@ -10,8 +10,8 @@
     <div class="columns pm-reset is-weeb">
         <div class="column title-block">
             <div class="titlewithsub">
-                <h1 class="title is-left">How to verify your account</h1>
-                <h2 class="subtitle">What do you mean? This must be easy right?</h2>
+                <h1 class="title is-left">Jak zweryfikować konto?</h1>
+                <h2 class="subtitle">Co ty myślałeś to musi być proste. Prawda?</h2>
             </div>
         </div>
         <div class="column icon-block">
@@ -22,8 +22,8 @@
         <div class="box is-padding">
             <div class="bordertitle">
                 <div class="titlewithsub">
-                    <h1 class="title is-left">Verification</h1>
-                    <h2 class="subtitle">Follow these three simple steps to get started playing {{ appName() }}!</h2>
+                    <h1 class="title is-left">Weryfikacja</h1>
+                    <h2 class="subtitle">Wykonaj te 3 kroki i będziesz mógł zacząć grać na naszym serwerze!</h2>
                 </div>
             </div>
             <div class="howto-content">
@@ -35,8 +35,8 @@
                                 <div class="howto-number">1</div>
                             </div>
                             <div class="howto-withsub">
-                                <h1 class="title is-left">Copy osu shortcut</h1>
-                                <h2 class="subtitle">Right click -> Properties.</h2>
+                                <h1 class="title is-left">Skopiuj skrót od osu</h1>
+                                <h2 class="subtitle">Prawy Przycisk Myszy --> właściwości</h2>
                             </div>
                         </div>
                     </div>
@@ -47,8 +47,8 @@
                                 <div class="howto-number">2</div>
                             </div>
                             <div class="howto-withsub">
-                                <h1 class="title is-left">Go to the target element</h1>
-                                <h2 class="subtitle">Go to the end, click space and type -devserver seventwentyseven.tk</h2>
+                                <h1 class="title is-left">Teraz znajdź "element docelowy"</h1>
+                                <h2 class="subtitle">Idź na koniec i dodaj -devserver zbancho.ml</h2>
                             </div>
                         </div>
                     </div>
@@ -59,8 +59,8 @@
                                 <div class="howto-number">3</div>
                             </div>
                             <div class="howto-withsub">
-                                <h1 class="title is-left">Save it</h1>
-                                <h2 class="subtitle">Login to your {{ appName() }} account and you should be done!</h2>
+                                <h1 class="title is-left">Kliknij zastosuj</h1>
+                                <h2 class="subtitle">Zaloguj się w osu. I Gotowe!</h2>
                             </div>
                         </div>
                     </div>
@@ -68,8 +68,8 @@
             </div>
             <div class="bordertitle">
                 <div class="titlewithsub">
-                    <h1 class="title is-left">Oh crap! I'm stuck please help me!</h1>
-                    <h2 class="subtitle">Need help? We've got you covered - join the Discord so our community can help you out!</h2>
+                    <h1 class="title is-left">Nosz kurła halyna to nie działa</h1>
+                    <h2 class="subtitle">Potrzebujesz pomocy? dołącz na naszego discorda</h2>
                 </div>
             </div>
             <div class="box flex is-mpadding is-marginless">
@@ -77,7 +77,7 @@
                         src="https://cdn.iconscout.com/icon/free/png-256/discord-2752210-2285027.png"
                         class="discord-logo">
                     <div class="clickhere-title flex flex-vcenter">
-                        <h1 class="title">Click here to join our Discord!</h1>
+                        <h1 class="title">Nacisnij tu aby dołączyć na discorda</h1>
                     </div>
                 </a>
             </div>
@@ -85,8 +85,8 @@
                 <div class="columns flex is-paddingless is-marginless">
                     <div class="column flex flex-vcenter">
                         <div>
-                            <h1 class="title is-left">Waiting for verification!</h1>
-                            <h2 class="subtitle">Follow the simple instructions above and once you're done reload this page!</h2>
+                            <h1 class="title is-left">Oczekiwanie na weryfikacje!</h1>
+                            <h2 class="subtitle">Jeżeli zrobiłeś wszystko według instrukcji odśwież strone</h2>
                         </div>
                     </div>
                     <div class="column icon-block">
